--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,10 @@
   }
 }
 
+html {
+  background-color: var(--bg-dark);
+}
+
 body {
   font-family: var(--font-display);
   background: linear-gradient(-45deg, #050505, #1a6264, #0B0B0C, #181824);
